# upgist

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  go.mod  main.go  main_test.go
.github/workflows/: docker-publish.yml
src/: main.rs
static/: index.html
